updated name of store

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gursimar Singh" />
-    <meta name="description" content="Webit store is a go to place E-commerce platform for every bit of your needs." />
+    <meta name="description" content="Gursimar's store is a go to place E-commerce platform for every bit of your needs." />
 
     <!-- External Link -->
     <link rel="stylesheet" href="./styles/homepage.css">
@@ -14,14 +14,14 @@
     <!-- Component Library -->
     <link rel="stylesheet" href="https://webit-ui.netlify.app/styles/components.css">
     
-    <title>Webitly | Home</title>
+    <title>Gursimar's Store | Home</title>
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="docs-navbar" id="store-navbar">
         <div class="title">
             <a class="brand-name" href="./index.html">
-                <img src="./assets/images/logo.png" alt="Webitly">
+                <img src="./assets/images/logo.png" alt="Gursimar's Store">
             </a>
         </div>
         <div class="search">
