--- a/pages/product.html
+++ b/pages/product.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gursimar Singh" />
-    <meta name="description" content="Webit store is a go to place E-commerce platform for every bit of your needs." />
+    <meta name="description" content="Gursimar's Store is a go to place E-commerce platform for every bit of your needs." />
 
     <!-- External Link -->
     <link rel="stylesheet" href="../styles/homepage.css">
@@ -16,7 +16,7 @@
     <!-- Component Library -->
     <link rel="stylesheet" href="https://webit-ui.netlify.app/styles/components.css">
 
-    <title>Webitly | Shop</title>
+    <title>Gursimar's Store | Shop</title>
 </head>
 
 <body>
