--- a/pages/signup.html
+++ b/pages/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gursimar Singh" />
-    <meta name="description" content="Webit store is a go to place E-commerce platform for every bit of your needs." />
+    <meta name="description" content="Gursimar's Store is a go to place E-commerce platform for every bit of your needs." />
 
     <!-- External link -->
     <link rel="stylesheet" href="../styles/homepage.css">
@@ -15,7 +15,7 @@
     <!-- Component Library -->
     <link rel="stylesheet" href="https://webit-ui.netlify.app/styles/components.css">
 
-    <title>Webitly | Signup</title>
+    <title>Gursimar's Store | Signup</title>
 </head>
 <body>
     <!-- Navigation Bar -->
